hphp/hack/test/typecheck/xhp_attr_spread_4.php.exp
File "xhp_attr_spread_4.php", line 13, characters 19-20:
Invalid xhp value for attribute :name in :bar (Typing[4110])
File "xhp_attr_spread_4.php", line 8, characters 13-18:
This is a string
File "xhp_attr_spread_4.php", line 4, characters 13-15:
It is incompatible with an int
